--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <!DOCTYPE html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
 
 <!--
 This is an HTML document. It contains information about how elements in the website
@@ -17,11 +21,14 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
 <head>
   <!-- This tells the browser how to read the document. -->
   <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
   <!-- Tells the browser what the title of this page should be. -->
   <title>Resume</title>
 
   <!-- Load the page styles. -->
+  <link href='http://fonts.googleapis.com/css?family=Droid+Serif|Ubuntu' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="css/normalize.css">
   <link href="css/style.css" rel="stylesheet">
 
   <!--
@@ -37,7 +44,7 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
   the DOM. jQuery is fast and easy to use, but it doesn't do anything
   you can't accomplish with vanilla (regular) JavaScript.
   -->
-  <script src="js/jQuery.js"></script>
+  <script src="js/libs/jQuery.js"></script>
 
   <!-- More on helper.js in the class -->
   <script src="js/helper.js"></script>
@@ -47,11 +54,12 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
   Google Map to your resume!
   -->
 <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places"></script>
+<script src="js/libs/modernizr-2.6.2.min.js"></script>
 
-  <meta name="viewport" content="width=device-width">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 </head>
 <body>
-  <div id="main">
+  <div id="main" class="wrapper">
     <!--
     Everything from here to the <script> tag below is the skeleton of your
     website. Your code will add information to each of the sections of the
@@ -60,20 +68,74 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
     -->
     <div id="header" class="center-content clear-fix">
       <ul id="topContacts" class="flex-box"></ul>
+      <!-- main navigation -->
+        <nav id="topnav" role="navigation">
+        <div class="menu-toggle">Menu</div>  
+          <ul class="srt-menu" id="menu-main-navigation">
+            <li><a href="basic.html">Home page</a></li>
+            <li class="current"><a href="basic-internal.html">Internal page demo</a></li>
+      <li><a href="#">menu item 3</a>
+        <ul>
+          <li>
+            <a href="#">menu item 3.1</a>
+          </li>
+          <li class="current">
+            <a href="#">menu item 3.2</a>
+            <ul>
+              <li class="current"><a href="#">menu item 3.2.1</a></li>
+              <li><a href="#">menu item 3.2.2 with longer link name</a></li>
+              <li><a href="#">menu item 3.2.3</a></li>
+              <li><a href="#">menu item 3.2.4</a></li>
+              <li><a href="#">menu item 3.2.5</a></li>
+            </ul>
+          </li>
+          <li><a href="#">menu item 3.3</a></li>
+          <li><a href="#">menu item 3.4</a></li>
+        </ul>
+      </li>
+      <li>
+        <a href="#">menu item 4</a>
+        <ul>
+          <li><a href="#">menu item 4.1</a></li>
+          <li><a href="#">menu item 4.2</a></li>
+        </ul>
+      </li>
+      <li>
+        <a href="#">menu item 5</a>
+      </li> 
+    </ul>     
+    </nav><!-- #topnav -->
     </div>
-    <div style="clear: both;"></div>
-    <div id="workExperience" class="gray">
-      <h2>Work Experience</h2>
+    <div id="content">
+      <div style="clear: both;"></div>
+      <div id="workExperience" class="gray">
+        <h2>Work Experience</h2>
+      </div>
+      <div id="projects">
+        <h2>Projects</h2>
+      </div>
+      <div id="education" class="gray">
+        <h2>Education</h2>
+      </div>
+      <div id="map-div">
+        <h2>Where I've Lived and Worked</h2>
+      </div>
     </div>
-    <div id="projects">
-      <h2>Projects</h2>
-    </div>
-    <div id="education" class="gray">
-      <h2>Education</h2>
-    </div>
-    <div id="map-div">
-      <h2>Where I've Lived and Worked</h2>
-    </div>
+    <!-- sidebar -->    
+    <aside>
+        <h2>Secondary Section menu</h2>
+            <nav id="secondary-navigation">
+                    <ul>
+                        <li><a href="#">menu item</a></li>
+                        <li class="current"><a href="#">current menu item</a></li>
+                        <li><a href="#">menu item</a></li>
+                        <li><a href="#">menu item</a></li>
+                        <li><a href="#">menu item</a></li>
+                    </ul>
+             </nav>
+      </aside><!-- #end sidebar -->
+   
+  </div><!-- #end div #main .wrapper -->
     <div id="lets-connect" class="dark-gray">
       <h2 class="orange center-text">Let's Connect</h2>
         <ul id="footerContacts" class="flex-box">
